@startuml
!theme plain
skinparam linetype ortho
skinparam backgroundColor #FEFEFE
skinparam entityFontSize 11
skinparam entityFontName "DejaVu Sans"

title Group 3 - Neighborhood Tool Sharing - ER Diagram\n(13 tables, codebase-aligned)

' ─── Users ───
entity "users" as users {
  * **id** : UUID <<PK>>
  --
  * email : VARCHAR(255) <<UNIQUE>>
  * hashed_password : VARCHAR(255)
  --
  full_name : VARCHAR(255)
  bio : TEXT
  neighborhood : VARCHAR(255)
  photo_url : VARCHAR(500)
  --
  * status : ENUM(EMAIL_PENDING, ACTIVE, SUSPENDED, DELETED)
  * is_admin : BOOLEAN
  * trust_score : FLOAT
  * damage_reported : INT
  * violation_count : INT
  --
  password_changed_at : TIMESTAMPTZ
  deleted_at : TIMESTAMPTZ
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
}

' ─── Invite Tokens ───
entity "invite_tokens" as invite_tokens {
  * **id** : UUID <<PK>>
  --
  * token : VARCHAR(64) <<UNIQUE>>
  * email : VARCHAR(255)
  * status : ENUM(sent, used, expired, revoked)
  created_by : UUID <<FK→users>>
  * expires_at : TIMESTAMPTZ
  used_at : TIMESTAMPTZ
  * created_at : TIMESTAMPTZ
}

' ─── Email Verification Tokens ───
entity "email_verification_tokens" as email_verification {
  * **id** : UUID <<PK>>
  --
  * token : VARCHAR(64) <<UNIQUE>>
  * user_id : UUID <<FK→users>>
  * expires_at : TIMESTAMPTZ
  used_at : TIMESTAMPTZ
  * created_at : TIMESTAMPTZ
}

' ─── Password Reset Tokens ───
entity "password_reset_tokens" as password_reset {
  * **id** : UUID <<PK>>
  --
  * token : VARCHAR(64) <<UNIQUE>>
  * user_id : UUID <<FK→users>>
  * expires_at : TIMESTAMPTZ
  used_at : TIMESTAMPTZ
  * created_at : TIMESTAMPTZ
}

' ─── Tool Categories (US28) ───
entity "tool_categories" as tool_categories {
  * **id** : UUID <<PK>>
  --
  * name : VARCHAR(100) <<UNIQUE>>
  description : TEXT
  created_by : UUID <<FK→users>>
  * created_at : TIMESTAMPTZ
}

' ─── Tools ───
entity "tools" as tools {
  * **id** : UUID <<PK>>
  --
  * owner_id : UUID <<FK→users>>
  * name : VARCHAR(255)
  description : TEXT
  * category : VARCHAR(100)
  * condition : ENUM(NEW, LIKE_NEW, GOOD, FAIR, POOR)
  --
  * is_active : BOOLEAN
  deactivated_by : ENUM(OWNER, ADMIN, DAMAGE_REPORT)
  deactivated_at : TIMESTAMPTZ
  deactivation_reason : TEXT
  --
  * avg_rating : FLOAT
  * rating_count : INT
  --
  deleted_at : TIMESTAMPTZ
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
}

' ─── Photos ───
entity "photos" as photos {
  * **id** : UUID <<PK>>
  --
  * tool_id : UUID <<FK→tools>>
  * url : VARCHAR(500)
  * display_order : INT
  * created_at : TIMESTAMPTZ
}

' ─── Reservations ───
entity "reservations" as reservations {
  * **id** : UUID <<PK>>
  --
  * tool_id : UUID <<FK→tools>>
  * borrower_id : UUID <<FK→users>>
  * state : ENUM(REQUESTED, APPROVED, PICKED_UP, RETURNED, DENIED, CANCELLED)
  * start_date : DATE
  * end_date : DATE
  --
  cancelled_by_type : VARCHAR(20)
  cancelled_reason : TEXT
  denied_reason : TEXT
  --
  picked_up_at : TIMESTAMPTZ
  returned_at : TIMESTAMPTZ
  --
  * damage_reported : BOOLEAN
  damage_description : TEXT
  damage_reported_at : TIMESTAMPTZ
  --
  force_resolved_by : UUID <<FK→users>>
  force_resolved_at : TIMESTAMPTZ
  force_resolution_reason : TEXT
  --
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
}

' ─── Messages ───
entity "messages" as messages {
  * **id** : UUID <<PK>>
  --
  * reservation_id : UUID <<FK→reservations>>
  * sender_id : UUID <<FK→users>>
  * body : TEXT
  * created_at : TIMESTAMPTZ
}

' ─── Reviews ───
entity "reviews" as reviews {
  * **id** : UUID <<PK>>
  --
  * reservation_id : UUID <<FK→reservations>>
  * reviewer_id : UUID <<FK→users>>
  * reviewee_id : UUID <<FK→users>>
  * rating : INT <<CHECK 1-5>>
  comment : TEXT
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
  <<UNIQUE(reservation_id, reviewer_id)>>
}

' ─── Listing Reports ───
entity "listing_reports" as listing_reports {
  * **id** : UUID <<PK>>
  --
  * tool_id : UUID <<FK→tools>>
  * reporter_id : UUID <<FK→users>>
  * reason : TEXT
  comment : TEXT
  * status : ENUM(PENDING, VALID, INVALID)
  resolved_by : UUID <<FK→users>>
  resolved_at : TIMESTAMPTZ
  resolution_note : TEXT
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
  <<UNIQUE(tool_id, reporter_id)>>
}

' ─── Notifications ───
entity "notifications" as notifications {
  * **id** : UUID <<PK>>
  --
  * user_id : UUID <<FK→users>>
  * type : VARCHAR(50)
  * title : VARCHAR(255)
  * body : TEXT
  payload : JSONB
  read_at : TIMESTAMPTZ
  * created_at : TIMESTAMPTZ
}

' ─── Admin Audit Log ───
entity "admin_audit_log" as admin_audit_log {
  * **id** : UUID <<PK>>
  --
  actor_id : UUID <<FK→users>>
  * action_type : VARCHAR(50)
  * target_type : VARCHAR(50)
  * target_id : UUID
  * reason : TEXT
  metadata : JSONB
  * created_at : TIMESTAMPTZ
}

' ─── Relationships ───
users ||--o{ invite_tokens : "creates"
users ||--o{ email_verification : "verifies"
users ||--o{ password_reset : "resets"
users ||--o{ tool_categories : "creates"
users ||--o{ tools : "owns"
users ||--o{ reservations : "borrows"
users ||--o{ messages : "sends"
users ||--o{ reviews : "writes (reviewer)"
users ||--o{ reviews : "receives (reviewee)"
users ||--o{ notifications : "receives"
users ||--o{ listing_reports : "reports"
users ||--o{ listing_reports : "resolves"
users ||--o{ admin_audit_log : "performs actions"
users ||--o{ reservations : "force-resolves"

tools ||--o{ photos : "files"
tools ||--o{ reservations : "served by"
tools ||--o{ listing_reports : "reported"

reservations ||--o{ messages : "thread"
reservations ||--o{ reviews : "produces"

@enduml
